--- a/app/views/principal/home.html.erb
+++ b/app/views/principal/home.html.erb
@@ -2,13 +2,15 @@
   <div class="row start-xs ">
 
       <div class="row middle-xs no-margin">
+        <div class=" avatar circle  z-depth-2">
+          <%= image_tag "http://www.requitix.io/mypics/max/68/686472_person-vector-png.jpg", class: "img" %>
 
-          <%= image_tag "avatar.png", class: "circle avatar" %>
+        </div>
 
         <div class="col-xs no-margin">
           <span class="text-24 secundario-text robotoB"><%=user.nombre_completo%></span>
-          <span>Nombre del rango</span>
-          <span>Correo@gmail.com</span>
+          <span class="titulos-text robotoL"><%=user.rango ||= 'Aspirante' %></span>
+          <span class="titulos-text"><%=user.email ||= 'correo no encontrado'%></span>
 
         </div>
 
@@ -16,84 +18,57 @@
 
   </div>
   <div class="row start-xs">
-      <div class="col-xs-12 col-lg-4">
-          <div class="card borde-radio-8" style="overflow: hidden;">
-            <section style="height: 109px;" class="image-card-noticias">
-
-
-            </section>
+      <div class="col-xs-12 col-lg-4 ">
+        <a href="#"></a>
+          <div class="card borde-radio-8 waves-effect hoverable" style="overflow: hidden;">
+            <section class="image-card noticias"></section>
               <div class="card-content padding-top-0">
-
-                  <span class=" principal-text left-align text-20 robotoB">Noticias</span>
+                  <span class=" primario-text left-align text-20 robotoB">Noticias</span>
                   <p class="left-align robotoB text-14 borde-text">Mantente informado de lo que la Gran Comisión Comunidad Cristiana Integral tiene para ti</p>
               </div>
-
           </div>
       </div>
       <div class="col-xs-12 col-lg-4">
-          <div class="card borde-radio-8">
-              <div class="card-content">
-                  <section>
-                      <%=image_tag("horario.jpg", class: "img-card")%>
+        <a href="/discipleships">
+        <div class="card borde-radio-8 waves-effect hoverable " style="overflow: hidden;">
+          <section class="image-card-50 discipulados"></section>
+          <div class="card-content padding-top-0">
+              <span class=" primario-text left-align text-20 robotoB">Discipulados</span>
+              <p class="left-align robotoB text-14 borde-text">Mantente informado de lo que la Gran Comisión Comunidad Cristiana Integral tiene para ti</p>
+          </div>
+        </div>
+      </a>
 
-                  </section>
-                  <span class="principal-text left-align text-20 robotoB">Horario</span>
+      </div>
+      <div class="col-xs-12 col-lg-4">
+        <a href="#"></a>
+          <div class="card borde-radio-8 waves-effect hoverable " style="overflow: hidden;">
+            <section class="image-card-50 horario"></section>
+              <div class="card-content padding-top-0">
+                  <span class=" primario-text left-align text-20 robotoB">Horario</span>
                   <p class="left-align robotoB text-14 borde-text">Mantente informado de lo que la Gran Comisión Comunidad Cristiana Integral tiene para ti</p>
-
               </div>
-
           </div>
       </div>
       <div class="col-xs-12 col-lg-4">
-          <div class="card borde-radio-8" >
-              <div class="card-content" >
-                  <section >
-                      <%=image_tag("notasExtendidas.jpg", class: "img-card")%>
-
-                  </section>
-                  <span class="principal-text left-align text-20 robotoB">Notas extendidas</span>
+        <a href="#"></a>
+          <div class="card borde-radio-8 waves-effect hoverable " style="overflow: hidden;">
+            <section class="image-card-50 notasExtendidas"></section>
+              <div class="card-content padding-top-0">
+                  <span class=" primario-text left-align text-20 robotoB">Notas extendidas</span>
                   <p class="left-align robotoB text-14 borde-text">Mantente informado de lo que la Gran Comisión Comunidad Cristiana Integral tiene para ti</p>
-
               </div>
-
+          </div>
+      </div>
+      <div class="col-xs-12 col-lg-4">
+        <a href="#"></a>
+          <div class="card borde-radio-8 waves-effect hoverable " style="overflow: hidden;">
+            <section class="image-card-50 historialInscripciones"></section>
+              <div class="card-content padding-top-0">
+                  <span class=" primario-text left-align text-20 robotoB">Historial de inscripciones</span>
+                  <p class="left-align robotoB text-14 borde-text">Mantente informado de lo que la Gran Comisión Comunidad Cristiana Integral tiene para ti</p>
+              </div>
           </div>
       </div>
   </div>
 </div>
-
-
-<% @publicaciones.each do |publication|%>
-    <div class="row center-xs">
-        <div class="col-xs-12 col-lg-4">
-            <div class="card borde-radio-8">
-                <div class="card-content">
-                    <section>
-                        <%=image_tag(publication.imagen.thumb.url)%>
-
-                    </section>
-                    <span class="card-title verdeBri-text left-align">Historial de inscripciones</span>
-                    <p class="left-align">
-                        <%= publication.descripcion%>
-                    </p>
-                </div>
-
-            </div>
-        </div>
-    </div>
-
-    <% end %>
-
-        <div class="row center-xs">
-            <div class="col-xs-12 col-lg-6">
-                <div class="card borde-radio-8">
-                    <div class="card-content">
-                        <section class="fondo">
-                            <h4>Imagen de la publicacion</h4>
-                        </section>
-                        <span class="card-title verdeBri-text left-align">Nombre de la publicacion</span>
-                        <p class="left-align">Descripción detallada de la publicación, realizada por el administrador para que los usuarios visualicen contenido de interés en general para los feligreses de la comunidad cristiana integral</p>
-                    </div>
-
-                </div>
-            </div>
-        </div>
