--- a/app/views/asistencia/index.html.erb
+++ b/app/views/asistencia/index.html.erb
@@ -1,33 +1,43 @@
 <br>
 <div class="container">
   <div class="row center-xs">
-    <div class="card z-depth-3 borde-radio-10"> 
-      <div class="row center-xs no-margin">
-        <div class="input-field col-xs-10 no-margin">                               
-        <input type="text" class="datepicker no-autoinit">
+    <div class="card z-depth-3 borde-radio-10 col-xs-12 col-lg-5 hoverable">
+      <div class="card-content padding-0 padding-horizontal-24">
+        <div class="row middle-xs margin-bottom-0">
+
+            <p class="robotoB text-20 primario-text">Fecha: </p>
+
+
+          <div class="col-xs end-xs">
+            <div class="input-field col-xs-10 no-margin">
+              <input type="text" class="datepicker no-autoinit">
+            </div>
+          </div>
+        </div>
+
       </div>
-      </div>
-      
+
+
     </div>
   </div>
 
 
   <div class="row center-xs">
-    <div class="card z-depth-3 borde-radio-10 margin-10">
+    <div class="card z-depth-3 borde-radio-10 margin-10 col-lg-5 ">
     <%= form_with url: group_asistencia_path do |f| %>
     <div id="dia">
-      
+
     </div>
-      
+
       <div class="padding-14">
-      
+
         <%= f.submit "Registrar", class: "btn  waves-light   borde-radio-8" %>
-        
+
 
       </div>
   </div>
   </div>
-  
+
 
 </div>
 
@@ -36,12 +46,12 @@
     </div>
 
     <script type="text/javascript">
-    
+
 
   $(document).ready(function(){
 
     $('.datepicker').datepicker({
-     
+
       format: 'dd-mmmm-yyyy',
       i18n: {
         cancel: 'Cancelar',
@@ -77,7 +87,7 @@
           'Nov',
           'Dic'
         ],
-                          
+
         weekdays:
         [
           'Domingo',
@@ -88,7 +98,7 @@
           'Viernes',
           'Sabado'
         ],
-                          
+
         weekdaysShort:
         [
           'Dom',
@@ -99,10 +109,10 @@
           'Vie',
           'Sab'
         ],
-                          
+
         weekdaysAbbrev: ['D','L','M','X','J','V','S']
       },
-      maxDate: new Date(),  
+      maxDate: new Date(),
       yearRange: [2010,2019] ,
       setDefaultDate: true,
       defaultDate: new Date(),
@@ -128,7 +138,7 @@
       }
     });
     $('.datepicker').datepicker("setDate", new Date());
-    
+
 
   });
 function modificar(){
@@ -136,7 +146,7 @@ function modificar(){
       // //$('#dia').disabled= habilitar;
       // //document.getElementById("#dia").disabled=habilitar;
       // alert('di clic a habilitar '+ habilitar);
-      
+
 
     }
 </script>
