--- a/app/views/principal/home.html.erb
+++ b/app/views/principal/home.html.erb
@@ -2,7 +2,7 @@
   <div class="row start-xs ">
 
       <div class="row middle-xs no-margin">
-        <div class=" avatar circle  z-depth-2">
+        <div class=" avatar-113 circle  z-depth-2">
           <%= image_tag "http://www.requitix.io/mypics/max/68/686472_person-vector-png.jpg", class: "img" %>
 
         </div>
