--- a/app/views/discipleships/index.html.erb
+++ b/app/views/discipleships/index.html.erb
@@ -10,29 +10,25 @@
     </ul>
 </div>
 
-<div class="container">
+<div class="container padding-top-24">
     <div class="row center-xs ">
         <% @discipleships.each do |discipulado| %>
+        <div class="col-xs-12 col-lg-4">
 
-            <div class="col-xs-12
-                    col-sm-8
-                    col-md-6
-                    col-lg-4 ">
-                <div class="box">
-                    <div class="card z-depth-2 borde-radio-10 hoverable">
-                        <div class="card-content black-text">
-                            <span class="card-title center-xs"><%=discipulado.nombre%></span>
-                            <p class="truncate">
-                                <%=discipulado.descripcion%>
-                            </p>
-
-                            <div class="actions center">
-                                <%= link_to  "Ver detalles", discipulado, class: "waves-effect waves-teal btn-flat " %>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+          <div class="card borde-radio-8 waves-effect hoverable " style="overflow: hidden;">
+            <section class="image-card-50 discipulados"></section>
+            <div class="card-content padding-vertical-0 maxmin-h-77">
+                <span class=" primario-text left-align text-20 robotoB"><%=discipulado.nombre%></span>
+                <p class="left-align robotoB text-14 borde-text padding-bottom-4 trunc-2"><%=discipulado.descripcion%></p>
             </div>
+            <section class="col-xs-12 center-xs verdeAdo waves-effect">
+              <%= link_to  "Ver detalles", discipulado, class: "btn-flat white-text robotoB" %>
+
+            </section>
+          </div>
+
+        </div>
+
             <%end%>
     </div>
 </div>
