--- a/app/views/enrolls/_form.html.erb
+++ b/app/views/enrolls/_form.html.erb
@@ -1,105 +1,99 @@
-  <div class="container">
-    <div class="row middle-xs no-padding">
-      <div class="col-xs-12 col-sm-8 col-md-6 col-lg-4 center-xs no-padding">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <div class="card borde-radio-10">
-        <%= form_with(model: enroll, local: true,autocomplete: "off") do |form| %>
-          <% if enroll.errors.any? %>
-            <div id="error_explanation">
-              <h2><%= pluralize(enroll.errors.count, "error") %> prohibited this enroll from being saved:</h2>
+  <div class="container padding-top-24">
+    <div class="row">
 
-              <ul>
-              <% enroll.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-              <% end %>
-              </ul>
-            </div>
-          <% end %>
-          <div class="card-content ">
-            <span class="card-title">Matricula</span>
-          <div class="row around-xs">
-            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-              <div class="box">
-                <div class="input-field col s12" >
-                
-                  <%= collection_select(:discipleship,:id,Discipleship.all, :id, :nombre,options = {prompt: "Seleccione"} ,html_options ={onChange: "update_versions_div(this.options[this.selectedIndex].value,'discipleship');"}) %>
-                  <label>Discipulado</label>
-                </div>   
-              </div>
-            </div>
-            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-              <div class="box">
-                <div class="input-field col s12" id="comboGrupo">
-                
-                  <%= form.select :group_id, [['Seleccione','']]%>
-                  <label>Grupo</label>
-                </div>   
-              </div>
-            </div>
-            
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <div class="card col-lg-12 center-xs borde-radio-10">
+        <div class="card-content">
+          <span class=" primario-text text-20 robotoB ">Realizar matricula</span>
+          <%= form_with(model: enroll, local: true,autocomplete: "off") do |form| %>
+          <div class="row around-xs margin-0">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-3">
               <div class="box">
                 <div class="input-field col s12">
                   <%= form.label :cedulaEstudiante, "Cedula del estudiante"%>
-                  <%= form.text_field :cedulaEstudiante, class: "no-autoinit autocomplete", id: "enroll_cedulaEstudiante", autocomplete: "off" %>
+                  <%= form.text_field :cedulaEstudiante, class: "no-autoinit autocomplete robotoR", id: "enroll_cedulaEstudiante", autocomplete: "off" %>
 
                 </div>
               </div>
             </div>
-          </div>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4">
+              <div class="box">
+                <div id="estudiante">
+                  <div class="row middle-xs">
+                    <div class=" avatar-76 circle loading fondo"></div>
+                    <div class="col-xs no-margin">
+                      <div class="h-20 w-p-100 loading fondo borde-radio-10"></div>
+                      <div class="h-20 w-p-40 loading fondo borde-radio-10"></div>
+                      <div class="h-20 w-p-60 loading fondo borde-radio-10"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-2">
+              <div class="box">
+                <div class="input-field col s12" >
 
-          
+                  <%= collection_select(:discipleship,:id,Discipleship.all, :id, :nombre,options = {prompt: "Seleccione"} ,html_options ={onChange: "update_versions_div(this.options[this.selectedIndex].value,'discipleship');", class: "robotoR"}) %>
+                  <label>Discipulado</label>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
+              <div class="box">
+                <div class="input-field col s12" id="comboGrupo">
+
+                  <%= form.select :group_id, [['Seleccione','']], class: "robotoR"%>
+                  <label>Grupo</label>
+                </div>
+              </div>
+            </div>
+
 
           </div>
-          <div class="card-action">
-            
-            <%= form.submit "Registrar",class: "btn  waves-light  borde-radio-5" %>
-          </div> 
-        <% end %>
-      </div>
-    </div>
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
-      <div class="box">
-        <div class="card z-depth-3 borde-radio-10">
-          <div class="card-content black-text start-xs" >
-            <span class="card-title center" >Datos del estudiante</span>
-            <div id="estudiante"></div>
+          <div class="row center-xs">
+            <span class=" primario-text text-20 robotoB ">Horario de clases</span>
+            <table class="striped highlight responsive-table">
+              <thead>
+                <tr>
+                    <th class="secundario-text robotoB">Lunes</th>
+                    <th class="secundario-text robotoB">Martes</th>
+                    <th class="secundario-text robotoB">Miercoles</th>
+                    <th class="secundario-text robotoB">Jueves</th>
+                    <th class="secundario-text robotoB">Viernes</th>
+                    <th class="secundario-text robotoB">Sabado</th>
+                    <th class="secundario-text robotoB">Domingo</th>
+
+                </tr>
+              </thead>
+
+              <tbody id="horario">
+
+              </tbody>
+            </table>
+
           </div>
-        </div>
-      </div>
-    </div>
-    </div>
-      
-    <div class="col-xs-12
-                col-sm-8
-                col-md-6
-                col-lg-6 " >
-      <div class="box">
-        <div class="card z-depth-3 borde-radio-10">
-          <div class="card-content black-text start-xs" >
-            <span class="card-title center" >Horario del grupo</span>
-            <div id="horario"></div>
+          <div class="row end-xs margin-bottom-0">
+            <%= form.submit "Registrar",class: "btn  waves-light  borde-radio-10 robotoB" %>
           </div>
+          <% end %>
         </div>
+
       </div>
-    </div>
+
   </div>
 
-  <div class="row center-xs" >
-    
-  </div>
 
 </div>
 
 
 
 
-      
-      
-  
+
+
+
 <script type="text/javascript">
   $("#grupo")
-  function update_versions_div(discipleship_i,combo) { 
+  function update_versions_div(discipleship_i,combo) {
 
           jQuery.ajax({
             url: "/cargar_grupos",
@@ -121,21 +115,21 @@
               }
               if(combo=='estudiante'){
                 jQuery("#estudiante").html(datos);
-                
+
 
               }
-              
+
             }
           });
            $('select').formSelect();
-           
+
           console.log('entre a la funcion con ajax');
         }
         $('select').formSelect();
-       
+
     document.addEventListener('turbolinks:load', function() {
          var arra={};
-          
+
 
           <%User.all.each do |user|%>
           arra[<%= "#{user.identificacion}"%>]= null;
@@ -152,7 +146,7 @@
     });
   //       $(document).ready(function(){
   //          var arra={};
-          
+
 
   //         <%User.all.each do |user|%>
   //         arra[<%= "#{user.identificacion}"%>]= null;
@@ -167,5 +161,5 @@
   //   });
 
   // });
-     
+
 </script>
