--- a/app/views/enrolls/index.html.erb
+++ b/app/views/enrolls/index.html.erb
@@ -16,18 +16,18 @@
         <div class="box">
             <div class="card z-depth-3 borde-radio-10">
                 <div class="card-content black-text center-xs">
-                    <span class="card-title center">Matriculas</span>
+                    <span class="robotoB text-20 center primario-text">Matriculas</span>
 
                     <table class="highlight striped responsive-table">
                         <thead>
                             <tr>
-                                <th>Identificacion</th>
-                                <th>Nombre</th>
-                                <th>Grupo</th>
-                                <th>Discipulado</th>
-                                <th>Estado</th>
-                                <th>Fecha de inscripcion</th>
-                                <th>Accion</th>
+                                <th class="primario-text">Identificacion</th>
+                                <th class="primario-text">Nombre</th>
+                                <th class="primario-text">Discipulado</th>
+                                <th class="primario-text">Grupo</th>
+                                <th class="primario-text">Estado</th>
+                                <th class="primario-text">Fecha de inscripcion</th>
+                                <th class="primario-text">Accion</th>
 
 
                             </tr>
@@ -37,32 +37,27 @@
                             <% @enrolls.each do |enroll| %>
 
                                 <tr>
-                                    <td>
+                                    <td class="primario-text">
                                         <%=enroll.user.identificacion%>
                                     </td>
-                                    <td>
+                                    <td class="primario-text">
                                         <%=enroll.user.nombre_completo%>
                                     </td>
-                                    <td>
+                                    <td class="primario-text">
                                         <%=enroll.group.codigo%>
                                     </td>
-                                    <td>
+                                    <td class="primario-text">
                                         <%=enroll.group.discipleship.nombre%>
                                     </td>
-                                    <td>
+                                    <td class="primario-text">
                                         <%=enroll.definitiva%>
                                     </td>
-                                    <td>
+                                    <td class="primario-text">
                                         <%=enroll.created_at%>
                                     </td>
+
                                     <td>
-                                        <%= link_to 'Detalles', enroll %>
-                                    </td>
-                                    <td>
-                                        <%= link_to 'Editar', edit_enroll_path(enroll) %>
-                                    </td>
-                                    <td>
-                                        <%= link_to 'Eliminar', enroll, method: :delete, data: { confirm: 'Esta seguro?' } %>
+                                        <%= link_to 'Eliminar', enroll, method: :delete, data: { confirm: 'Esta seguro?' }, class: "rojoBri-text robotoB" %>
                                     </td>
 
                                 </tr>
