modificando form discipleships
creacion de contenido anidado desde el formulario del discipulado
  -creacion de pactos
  -creacion de lecciones

correcciones por hacer
  -eliminar contenido anidado desde el formulario de edicion del discipulado

dificultad
  - checkbox para eliminar contenido aparece tambien en el formulario para crear un nuevo discipulado(solo debe aparecer al editar)

--- a/app/assets/stylesheets/principal.scss
+++ b/app/assets/stylesheets/principal.scss
@@ -198,6 +198,19 @@ $fuentes: (
   background-repeat: no-repeat;
   background-size: 45%;
 }
+::-webkit-file-upload-button {
+  padding: 10px;
+  background: #51B133;
+  color: #FFFFFF;
+  font-size: 12px;
+  
+  border-radius: 10px;
+  font-family: "Roboto Bold";
+  border: 0;
+
+
+}
+
 .loading {
   position: relative;
   margin-bottom: 4px !important;
