--- a/app/views/discipleships/_form.html.erb
+++ b/app/views/discipleships/_form.html.erb
@@ -1,63 +1,119 @@
 <div class="row middle-xs no-margin">
   <div class="container ">
     <div class="row center-xs">
-        <div class=" col-xs-12 col-sm-8 col-md-6 col-lg-6">
-            <div class="card z-depth-3 borde-radio-10">
-                <div class="card-content ">
-                    <span class="card-title"><%=@texto%></span>
-                    <p>Datos</p>
-                    <%= form_with(model: discipleship, local: true) do |f| %>
-                <div class="row around-xs">
+      <div class="col-xs-12 col-sm-8 col-md-6 col-lg-6">
+        <div class="card borde-radio-10 hoverable">
+          <section class="image-card-50 discipulados" style="overflow: hidden;"></section>
+          <div class="card-content padding-top-0">
+            <%= form_with(model: @discipleship, local: true) do |f| %>
+            <div class="row start-xs">
 
-                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-                    <div class="box">
-                      <div class="input-field">
-                        <i class="material-icons prefix">border_color</i>
-                        <%= f.label :nombre , "Nombre"%>
-                        <%= f.text_field :nombre, id: :discipleship_nombre %>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-                    <div class="box">
-                      <div class="input-field">
-                        <i class="material-icons prefix">local_offer</i>
-                        <%= f.label :rangoOtorgado ,"Rango otorgado"%>
-                        <%= f.text_field :rangoOtorgado, id: :discipleship_rangoOtorgado %>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <div class="box">
-                      <div class="input-field">
-                        <i class="material-icons prefix">assignment</i>
-                        <%= f.label :descripcion %>
-                        <%= f.text_area :descripcion, id: :discipleship_descripcion, class: "materialize-textarea" %>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <div class="box">
-                      <div class="input-field">
-                        <i class="material-icons prefix">assignment</i>
-                        <%= f.label :descripcionPacto, "Descripcion del compromiso" %>
-                        <%= f.text_area :descripcionPacto, id: :discipleship_descripcionPacto, class: "materialize-textarea" %>
-                      </div>
-                    </div>
-                  </div>
-                  </div>
-                  <div class="actions ">
-
-                    <%= f.submit "Aceptar",class: "btn  waves-light  borde-radio-5" %>
-                    <br><br>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+            <div class="box">
 
 
+                <%= f.text_field :nombre, id: :discipleship_nombre , class: "text-20 robotoB primario-text", placeholder: "Nombre"%>
 
-                    </div>
-                    <%end%>
-                </div>
             </div>
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <div class="box  left-align">
+
+
+                <%= f.label :descripcion %>
+                <%= f.text_area :descripcion, id: :discipleship_descripcion, class: "text-14 robotoB titulos-text borde-radio-10", placeholder: "Descripción acerca del contenido del discipulado a ofertar", style: "border-style: dashed; resize: none;" %>
+
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+            <div class="box">
+
+
+                <%= f.text_field :rangoOtorgado, id: :discipleship_rangoOtorgado, class: "text-14 primario-text robotoB", placeholder: "Rango otorgado" %>
+
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="box left-align">
+
+
+                <%= f.label :descripcionPacto, "Descripcion del compromiso" %>
+                <%= f.text_area :descripcionPacto, id: :discipleship_descripcionPacto, class: "text-14 robotoB titulos-text borde-radio-10", placeholder: "Descripción acerca del pacto, esto es opcional si en el archivo pdf adjuntado a continuación está esta información", style: "border-style: dashed; resize: none;" %>
+
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="box left-align">
+              <%= f.fields_for :covenants do |covenant_form| %>
+              <label for="">Adjuntar pacto de compromiso</label>
+              <%= covenant_form.file_field :pdf, class: 'robotoL' %>
+              <% end %>
+
+
+            </div>
+          </div>
+
+            <div class="col-xs-12">
+              <span class="text-20 robotoB primario-text left-align">Lecicones</span>
+            </div>
+
+            <div class="col-xs-12" id="lecciones">
+
+                <%= f.fields_for :lessons do |l|%>
+                <div class="row middle-xs margin-bottom-10">
+                  <div class="col-xs-10">
+                    <%= l.text_field :nombre, placeholder: "Titulo", class: "text-12 robotoB h-14 primario-text"%>
+                    <%= l.text_area :descripcion , class: "text-14 robotoB titulos-text borde-radio-10", style: "border-style: dashed; resize: none;"%>
+                  </div>
+                  <label>
+                    <%= l.check_box :_destroy %>
+
+                    <span></span>
+                  </label>
+
+                </div>
+
+
+                <% end %>
+
+            </div>
+            <div class="col-xs end-xs">
+              <div>
+                <a class="waves-effect btn-small borde-radio-10 robotoB " id="agregarLeccion">agregar</a>
+              </div>
+
+            </div>
+
+
+
         </div>
+        <div class="col-xs">
+          <div class="right-align">
+            <%= f.submit "Guardar",class: "btn  waves-light  borde-radio-5" %>
+          </div>
+        </div>
+            <% end %>
+          </div>
+
+        </div>
+      </div>
     </div>
+
 </div>
+<script type="text/javascript">
+  function quitarLeccion(id){
+    $("#"+id).remove();
+  }
+  document.addEventListener("turbolinks:load", function() {
+  autosize(document.querySelectorAll('textarea'));
+  //when the Add Field button is clicked
+  var contadorLecciones = 0;
+  $("#agregarLeccion").click(function (e) {
+  //Append a new row of code to the "#items" div
+  contadorLecciones = Math.floor(Math.random() * 2000) + 1000;
+    $("#lecciones").append('<div id="'+contadorLecciones+'" class="row middle-xs margin-bottom-0"><div class="col-xs-10"><input type="text" name="discipleship[lessons_attributes]['+contadorLecciones+'][nombre]" value="" placeholder="Titulo" class="text-12 robotoB h-14 primario-text"><textarea name="discipleship[lessons_attributes]['+contadorLecciones+'][descripcion]" class="text-14 robotoB titulos-text borde-radio-10" style="border-style: dashed; resize: none;"></textarea></div><a class="waves-effect btn-small borde-radio-10 robotoB rojoBri" id="quitar" onclick="quitarLeccion('+contadorLecciones+')">quitar</a></div>');
+  });
+
+  //-------fin
+  })
+</script>
